--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 members = [
     "runner-torneo",
     "template-torneo", 
-    "test-runner",
-    "test-runner-2"
+    "alessio-1",
+    "alessio-2",
 ]
 #[workspace.dependencies]
