--- a/runner-torneo/Cargo.toml
+++ b/runner-torneo/Cargo.toml
@@ -10,3 +10,4 @@ colored="2.0"
 template-torneo = {path ="../template-torneo"}
 alessio-1 = {path ="../alessio-1"}
 alessio-2 = {path ="../alessio-2"}
+mattiaz_2 = {path ="../mattiaz_2"}
