--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ members = [
     "template-torneo", 
     "alessio-1",
     "alessio-2",
-    "leo_2",
+    "leo_2", "leo_1",
 ]
 #[workspace.dependencies]
