--- a/runner-torneo/Cargo.toml
+++ b/runner-torneo/Cargo.toml
@@ -13,3 +13,4 @@ alessio-2 = {path ="../alessio-2"}
 leo_2 = { version = "0.1.0", path = "../leo_2" }
 mattiaz_2 = {path ="../mattiaz_2"}
 leo_1 = { version = "0.1.0", path = "../leo_1" }
+bot_1 = { version = "0.1.0", path = "../bot_1" }
