--- a/runner-torneo/Cargo.toml
+++ b/runner-torneo/Cargo.toml
@@ -12,6 +12,8 @@ alessio-1 = {path ="../alessio-1"}
 alessio-2 = {path ="../alessio-2"}
 leo_2 = { version = "0.1.0", path = "../leo_2" }
 mattiaz_2 = {path ="../mattiaz_2"}
+mattiaz_1 = {path ="../mattiaz_1"}
 leo_1 = { version = "0.1.0", path = "../leo_1" }
 bot_1 = { version = "0.1.0", path = "../bot_1" }
 bot_2 = { version = "0.1.0", path = "../bot_2" }
+alessio_3 = { version = "0.1.0", path = "../alessio_3" }
