--- a/runner-torneo/Cargo.toml
+++ b/runner-torneo/Cargo.toml
@@ -10,6 +10,7 @@ colored="2.0"
 template-torneo = {path ="../template-torneo"}
 alessio-1 = {path ="../alessio-1"}
 alessio-2 = {path ="../alessio-2"}
+davide = { version = "0.1.0", path = "../davide" }
 leo_2 = { version = "0.1.0", path = "../leo_2" }
 mattiaz_2 = {path ="../mattiaz_2"}
 mattiaz_1 = {path ="../mattiaz_1"}
