--- a/runner-torneo/Cargo.toml
+++ b/runner-torneo/Cargo.toml
@@ -12,3 +12,4 @@ alessio-1 = {path ="../alessio-1"}
 alessio-2 = {path ="../alessio-2"}
 leo_2 = { version = "0.1.0", path = "../leo_2" }
 mattiaz_2 = {path ="../mattiaz_2"}
+zen = { version = "0.1.0", path = "../zen" }
